# wasser

./: README.md  setup.cfg  setup.py
.github/workflows/: tests.yml
examples/jjb/: aquarium.yaml
examples/workflow/: k3s.yaml  libvirt.yaml  sesdev.yaml
test/: test_spec.py
wasser/: __init__.py  __main__.py
wasser/equip/: __init__.py
wasser/shell/: __init__.py
wasser/snippets/: clone-git-repo.sh
wasser/state/: __init__.py
