[metadata]
name = wasser
summer = Delivery and Test Automation tool
home_page = https://github.com/aquarist-labs/wasser
requires_dist = setuptools
keywords = automation, delivery
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
install_requires =
    paramiko
    pdb-attach
    requests
    openstacksdk
    python-openstackclient
    jinja2

packages =
    find:

[options.package_data]
wasser = snippets/*.*, openstack/*.*

[options.extras_require]
tests =
    pycodestyle
    pylint
    pytest

[options.entry_points]
console_scripts =
    wasser = wasser:main
    wa = wasser:main
    ws = wasser:main

[pycodestyle]
max-line-length = 120

